# UG-EvolutionaryComputing-24

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
Tareas/Tarea-01/: Tarea-01.ipynb  Tarea-01.typ  main.jl  readme.md
Tareas/Tarea-02-mini/: main.jl
src/: ga.jl  nelder_mead.jl  optitest.jl
test/: ga_test.jl
