[tool.poetry]
name = "evolutionarycomputing"
version = "0.1.0"
description = "Evolutionary algorithms"
authors = ["mismorgano <mismorgano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
